live/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codebrewlab-live
  labels:
    name: codebrewlab-live
