live/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atehere-deployment
  namespace: codebrewlab-live
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atehere

  template:
    metadata:
      labels:
        app: atehere

    spec:
      containers:
        - name: atehere
          image: ghcr.io/mechatron-x/atehere:release
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          command: ["atehere"]
          args: ["-c", "/etc/atehere/application.json"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/atehere
            - name: static-volume
              mountPath: /var/lib/atehere/static
          ports:
            - name: web
              containerPort: 80
          imagePullPolicy: Always

        - name: atehere-db
          image: docker.io/postgres:17-bookworm
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: pg-volume
              mountPath: /var/lib/postgresql
          ports:
            - containerPort: 5432
          imagePullPolicy: Always

      imagePullSecrets:
        - name: codebrewlab.ghcr.io

      volumes:
        - name: config-volume
          configMap:
            name: atehere-appconfig
            items:
              - key: application.json
                path: application.json
        - name: pg-volume
          persistentVolumeClaim:
            claimName: atehere-db-pvc 
        - name: static-volume
          persistentVolumeClaim:
            claimName: atehere-static-pvc
