live/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atehere-service
  namespace: codebrewlab-live
spec:
  selector:
    app: atehere
  ports:
    - port: 80
      targetPort: 80
