live/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atehere-ingress
  namespace: codebrewlab-live
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: atehere.codebrewlab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atehere-service
                port:
                  number: 80
